# llama-pack

./: .gitignore  .llama_pack.env.example  .neuraxis.env.example  AGENTS.md  LICENSE  README.md  alembic.ini  config.example.yaml  linux-agent.config.example.yaml  pyproject.toml  raspberry-pi-controller.config.example.yaml
.github/: copilot-instructions.md
config/: agent_tools.example.yaml  auth.example.yaml  models.example.yaml  persistence.example.yaml  routing.example.yaml  runtime.example.yaml
desktop/: package-lock.json  package.json
docs/: agent-tools.md  api.md  architecture.md  benchmarks.md  caddy-local-tls-issues.md  caddy-local-tls.md  chat-slash-commands.md  configuration.md  downloads.md  frontend.md  how-to-use.md  multi-agent-routing.md  pi-controller-topology.md  plugin-databases.md  plugin-page-authoring-v1.md  plugins.md  setup.md  tls-caddy-plan.md  windows-install.md  workflows.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
llama_manager/: auth.py  main.py
llama_pack/: __init__.py  auth.py  main.py
migrations/: README.md  env.py
scripts/: backfill_capacity_ctx.py  backfill_models_db.py  code_graph_ts_parser.mjs  create_test_chat_key.sh  dev_fullstack.sh  evaluate_ocr_candidates.py  generate_api_key.py  install_caddy_fullchain.sh  install_embedding_model.sh  install_llama_cpp.sh  install_ocr_model.sh  kill_apps.sh  linux_agent_smoke.py  migrate_all.py  migrate_legacy_data.py  model_transfer_smoke.py  onboard_agent.sh  onboard_controller.sh  refresh_curated_catalog.py  (+17 more)
(+796 files in other folders)
