[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llamacpp-handler"
version = "0.1.0"
description = "FastAPI llama.cpp process manager and controller"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "beautifulsoup4>=4.12",
    "fastapi>=0.110",
    "httpx>=0.27",
    "huggingface-hub>=1.15.0",
    "psutil>=5.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0",
    "respx>=0.23.1",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.29",
    "chromadb>=1.5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
include = ["llama_manager*"]

[tool.setuptools.package-data]
llama_manager = ["ui/*", "ui/assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
